css/style0.css
/* GLOBAL STYLES + MOBILE STYLES */

body {
  font-family: "Public Sans", "DM Serif Display";
  /* background-color: hsl(207, 16%, 50%); */
  /* background-color: rgb(108, 130, 148); */
  background-color: #EDF3F8;
  margin: 0;
  text-align: center;
  /* background-color: #36536B; */
  /* background-color: #6c8294; */
}

h2 {
  font-size: 1.7em;
  color: #36536B;
  /* text-align: center; */
}

h3 {
  color: #BA4270;
}

a {
  color: #36536B;
  text-decoration-line: none;
}
/* below: color of semi circle... */
/* background-color: hsl(0%, 0%, 92%); */

main {
  background-color: lightgrey;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

header {
  display: flex;
}

p {
  color: #36536B;
}

form ul li:nth-child(1) {
  color: red;
  opacity: 50%;
  border-bottom: 1px solid grey;
  padding-bottom: 1em;
  list-style-type: none;
}

#price {
  color: #36536B;
  font-size: 4em;
  /* border-bottom: 1px solid rgba(54, 83, 107, .25); */
}

#untick {
  opacity: 50%;
}

/* #free-plan li:nth-child(7) {

} */

/* #free-plan {
  /* text-align: center; */

/* USE GRID INSTEAD (1ST COL: TICKS, 2ND COL: CONTENT) */
/* #free-plan ul { */

section ul {
  padding-top: 2em;
  padding-bottom: 2em;
  list-style-type: none;
  border-bottom: 1px solid rgba(54, 83, 107, .25);
  border-top: 1px solid rgba(54, 83, 107, .25);
  display: flex;
  flex-direction: column;
  display: inline;
}

section ul li img {
  display: inline;
  height: 2vh;
}

section h3 {
  color: #36536B;
}

p {
  color: #6c8294;
}

/* pricing button */
button {
  color: #36536B;
  border: 1px solid #36536B;
  border-radius: 50px;
  padding: 15px;
  width: 15em;
  font-size: 1em;
  margin-left: auto;
  margin-right: auto;
}

header nav {
  display: flex;
  justify-content: space-between;
  margin: 2.5em 1.5em;
}

#nav {
  display: flex;
  /* margin-left: auto;
  margin-right: auto; */
}

header nav ul {
  display: none;
}

/* place on right side... */
#menuToggler {
  /* font-size: 500%; */
  /* font-stretch: expanded; */
  /* width: 100%; */
}

#stats {
  color: #BA4270;
  font-size: 4em;
}

#contact-companies ul {
  border: none;
}

form fieldset {
  display: flex;
  flex-direction: column;
  opacity: 50%;
  color: #36536B;
}

section ul div {
  padding-top: 1em;
  padding-bottom: 1em;
}

section ul {
  border-top: 1px solid rgba(54, 83, 107, .25);
  border-bottom: 1px solid rgba(54, 83, 107, .25);
  color: #36536B;
  /* display: flex;
  flex-direction: column; */
}

section ul div {
  padding-top: 2em;
  padding-bottom: 2em;
}

section {
  display: flex;
  flex-direction: column;
  margin: 2em;
}

section img {
  height: 30vh;
  margin-left: auto;
  margin-right: auto;
  /* TEST THIS BELOW GET RID SEE IF IMG STAYS THE SAME SIZE... */
  display: flex;
  justify-content: center;
}

section input {
  padding: 15px;
  border-radius: 50px;
  border: none;
  background-color: #FBFCFE;
  box-shadow: 10px 10px 25px -10px;
}

/* how to change input placeholder color */
::placeholder {
  color: #979797;
  opacity: 50%;
}

/* change to button... */
#demo {
  color: white;
  background-color: #BA4270;
  text-align: center;
  padding: 15px;
  border-radius: 50px;
  border: none;
  width: 200px;
}

/* delete this after all buttons the same... */
/* section label {
  color: white;
  background-color: #BA4270;
  text-align: center;
  padding: 15px;
  border-radius: 50px;
} */

#who_we_work_with {
  background-color: #1B262F;
  /* border: 1px solid red; */
  color: white;
  align-items: center;
  margin: 0;
}

#who_we_work_with ul {
  /* display: grid; */
  /* grid-template-columns: 12px; */
  list-style-type: none;
  margin-top: 4em;
  column-count: 2;
}

#who_we_work_with ul li img {
  height: 1em;
}

#who_we_work_with p {
  opacity: 70%;
  margin-left: 1.5em;
  margin-right: 1.5em;
  text-align: center;
  margin: 0 1.5em 10px;
  line-height: 200%;
}

#who_we_work_with a {
  margin-bottom: 4em;
  margin-top: 3em;
  border: 2px solid white;
  border-radius: 50%;
  width: 100px;
  height: 20px;
  text-align: center;
  text-decoration: none;
  color: white;
  padding: 15px;
  border-radius: 50px;
}

footer {
  margin-left: auto;
  margin-right: auto;
  /* width: 50%; */
  text-align: center;
  background-color: #1B262F;
  color: white;
}

footer nav ul {
  list-style-type: none;
}

footer nav section ul li img {
height: 5vh;
}

#text {
  opacity: 70%;
}

#social_media {
  margin-left: 5em;
  margin-right: 5em;
}

#social_media ul {
  display: flex;
  justify-content: space-around;
}

/* TABLET STYLES */

@media screen and (min-width: 376px) {

  body {
    background-color: lightblue;
  }

  h2 {
    font-size: 3em;
  }

  #menuToggler {
    display: none;
  }

  header nav ul {
    display: flex;
    list-style-type: none;
    justify-content: space-between;
  }

  #demo-input {

  }
  /* header nav li img {
  } */

  /* header nav:nth-child(1){
    color: red;
  } */

  /* header nav ul {
    display: flex;
    list-style-type: none;
    /* display: flex; */
    /* justify-content: center; */

}

/* DESKTOP STYLES */

@media screen and (min-width: 769px) {
  body {
    background-color: yellow;
  }

  #menuToggler {
    display: none;
  }

  header nav ul {
    display: flex;
    list-style-type: none;
    /* display: flex; */
    /* justify-content: center; */
  }
}

